feat: migra para sqlite

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# App Configuration
+ # App Configuration
 APP_ENV=development
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_LANG=pt-BR
 
 # Database Configuration (SQLite)
-DB_CONNECTION=sqlite
-DB_DATABASE=/home/jakunzler/Documents/GitHub/campeonato_esportivo/db/championship.sqlite
+DB_CONNECTION=sqlite 
+DB_DATABASE=/absolute/path/to/db/championship.sqlite
 
 # Security
 APP_KEY=random_generated_key_here
@@ -17,10 +17,10 @@ SESSION_LIFETIME=120
 
 # Mail Configuration (if needed)
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=smtp.example.com
 MAIL_PORT=587
-MAIL_USERNAME=jakunzler.fpm@gmail.com
-MAIL_PASSWORD=4sus2024!
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=jakunzler.fpm@gmail.com
+MAIL_FROM_ADDRESS=hello@example.com
 MAIL_FROM_NAME="Championship App"
